# django-vue-comments

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/backend/: manage.py
backend/backend/attachments/: admin.py  apps.py  models.py  post_processors.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/backend/attachments/migrations/: 0001_initial.py  0002_alter_attachment_file.py  0002_attachment_filetype.py  0003_alter_attachment_file_alter_attachment_filetype.py  0004_attachment_is_image.py  0005_attachment_resized.py  0006_remove_attachment_resized_alter_attachment_file.py
backend/backend/comments/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/backend/comments/migrations/: 0001_initial.py  0002_comment_parent.py  0002_initial.py  0003_alter_comment_homepage.py  0004_rename_datetime_crated_comment_datetime_created.py  0005_remove_comment_user_comment_email_comment_username_and_more.py  0006_alter_comment_options.py
backend/backend/core/: middleware.py
backend/backend/core/utils/: tokens.py
backend/backend/project/: asgi.py  celery.py  urls.py
backend/backend/project/settings/: __init__.py  base.py  celery.py  channels.py  cloudinary.py  custom.py  envvars.py  restframework.py
backend/backend/project/settings/templates/: settings.dev.py  settings.prod.py
backend/backend/users/: models.py  serializers.py  urls.py  views.py
backend/backend/users/migrations/: 0001_initial.py
backend/local/: settings.dev.py
backend/scripts/: all_in_one.sh  entrypoint.sh  run_celery.sh  run_django.sh
(+33 files in other folders)
