[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "SherlockH0", email = "ddmlf7@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django (>=5.2,<6.0)",
  "django-channels (>=0.7.0,<0.8.0)",
  "django-split-settings (>=1.3.2,<2.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
